# Certification_Challenge

./: .gitattributes  README.md
Certification_Challenge_Evaluation/: End_to_End_Rag copy.ipynb  End_to_End_Rag.ipynb  Evaluating_RAG_with_Ragas.ipynb  Fine_tuning_Embedding_Models_for_RAG_Notebook.ipynb  Problem_Definition_&_Solution.md  pyproject.toml
End_to_End_Cert_Challenge/: app.py  app_copy.py  app_final.py  app_final_v1.py  app_finalv2.py  pyproject.toml  pyproject_bkp.toml  test_app.py
End_to_End_Cert_Challenge/.chainlit/: config.toml
