[project]
name = "02-embeddings-and-rag"
version = "0.1.0"
description = "Embeddings and RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "nump>=5.5.5.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
     "arxiv==2.1.3",
    "duckduckgo-search==5.3.1b1",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-openai==0.3.2",
    "langgraph==0.2.67",
    "langchain-core==0.3.31",
    "langchain-qdrant==0.2.0",
    "qdrant-client==1.13.2",
    "tiktoken>=0.8.0",
    "pymupdf==1.25.2",
    "langgraph==0.2.67",
    "langsmith==0.3.1",
    "openai==1.60.0",
    "cohere==5.13.11",
    "lxml==5.3.0",
    "bs4==0.0.2",
    "pydantic==2.10.0",
    "grandalf>=0.8",
    "pyppeteer>=2.0.0",
    "pypdf==4.0.1",
    "langchain-cohere>=0.4.2",
    "nltk>=3.9.1",
    #"numpy>=2.2.2",
    "ragas==0.2.10",
    "unstructured>=0.14.8",
    "pyarrow>=19.0.0",
    "python-pptx==1.0.2",
    "sentence-transformers>=3.4.1",
    "transformers[torch]>=4.48.3",
    "wandb>=0.19.6",
    #"langchain-text-splitters>=0.3.6",
    "langchain-huggingface>=0.1.2",
]
