[project]
name = "rag-deployment"
version = "0.1.0"
description = "Simple Pythonic RAG App"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chainlit==2.5.5",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-qdrant==0.2.0",
    "qdrant-client==1.11.1",
    "openai>=1.14.3",
    "tiktoken>=0.6.0",
    "pymupdf==1.25.2",
    "pydantic==2.10.1",
    "pypdf==3.17.4",    # optional, depending on loader
    "sentence-transformers>=2.2.2"
]

